<resources>
    <string name="app_name">Summer Practice 2022 Tv Tracker</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_text">You don\'t have an account? Register here.</string>
    <string name="email_hint">Please enter your email</string>
    <string name="password_hint">Please enter your password</string>
    <string name="fill_all_fields">Please fill all fields!</string>
    <string name="backdrop">backdrop</string>
    <string name="cover">cover</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="lorem_ipsum_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus scelerisque magna, non vehicula ligula sagittis a. Nullam sit amet dictum dui. Etiam consectetur metus nunc, ac auctor enim dignissim nec. Quisque ornare sollicitudin cursus. Donec ut tellus massa. Cras eget turpis a diam ullamcorper fermentum. Nulla eu varius risus, id commodo urna. Ut at urna fringilla, tempor urna vel, tincidunt mi. Quisque ipsum nisl, interdum at tristique non, vehicula et nisi. Praesent at nibh mattis, porta tellus vel, consequat mi. Integer tincidunt tempor nibh. Duis vitae luctus nisl, ac suscipit magna. Sed porta, justo sed varius blandit, purus massa sagittis lectus, imperdiet lacinia odio nibh sed dui. Fusce id blandit lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque lacinia aliquet eros, lobortis hendrerit quam. Vestibulum non erat sed odio aliquam rutrum et ac lorem. Integer sodales et ligula vel placerat. Proin nulla dolor, hendrerit posuere lorem a, tempor interdum felis. Phasellus fermentum a dolor quis ornare. Donec vitae sem sit amet nisi ullamcorper gravida eget vel diam. Vestibulum vestibulum risus urna, vel sollicitudin ligula tempor id. Proin sit amet sagittis nisi. Sed placerat lacus eget feugiat dignissim. Morbi vitae ipsum in dolor condimentum hendrerit. Aliquam molestie orci eu arcu tempor tristique. Nunc euismod finibus efficitur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus sagittis leo eget orci iaculis, eget vehicula nisi aliquet. In id maximus erat. Vivamus a massa leo. Phasellus elementum, justo vitae congue pharetra, mi velit egestas lorem, ac tincidunt sem dui eu massa. Quisque maximus urna justo, sit amet ultricies justo viverra et. Nam rhoncus nisl velit, ut iaculis enim condimentum in. Quisque vel faucibus nibh, et tempus erat. Proin urna nibh, congue cursus magna id, mattis ornare ante.</string>
    <string name="title_placeholder">Title Placeholder</string>
    <string name="rating_placeholder">Rating Placeholder</string>
    <string name="back_icon">Back Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
</resources>