<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/backdrop"
        android:id="@+id/backdropImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_placeholder"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/coverImage"
        android:contentDescription="@string/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.1"
        app:srcCompat="@drawable/small_placeholder"
        />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/back_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        />

    <Button
        android:id="@+id/addToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:radius="70dp"
        android:text="@string/add_to_favorites"
        android:background="@drawable/btn_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_placeholder"
        app:layout_constraintStart_toEndOf="@+id/coverImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coverImage"
        app:layout_constraintBottom_toTopOf="@+id/detailsScrollView"

        />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_placeholder"
        app:layout_constraintStart_toEndOf="@+id/coverImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/detailsScrollView"

        />

    <ScrollView
        android:id="@+id/detailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverImage"
        app:layout_constraintBottom_toTopOf="@+id/addToFavoritesButton">
        <TextView
            android:id="@+id/innerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/lorem_ipsum_placeholder"
            />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>